[project]
name = "orbital-usage-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Jose Estrella Campana",email = "jlecampana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.0,<9.0.0)"
]

[tool.poetry]
packages = [{include = "orbital_usage_api", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"